public/css/crystal-shards.css
html {
  position: relative;
  min-height: 100%;
}

body {
  padding-top: 4.5rem;
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

ul.not-list {
  padding-left: 0px;
}

ul.not-list li {
  list-style-type: none;
}

.nav-tabs {
  margin-bottom: 15px;
}

.space {
  height: 16px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 60px;
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

.pagination {
  margin-top: 16px;
}

.search-wrap {
  margin-top: 0;
  margin-left: auto;
  position: relative;
  width: 40%;
}

@media (max-width: 576px) {
  .search-wrap {
    margin-top: 10px;
    width: 100%;
  }
}

.search-wrap .search-icon {
  top: 5px;
  right: 10px;
  border: none;
  background-color: transparent;
  font-size: 18px;
  font-family: "icomoon";
  color: #007bff;
  position: absolute;
  cursor: pointer;
}

.navbar {
  margin-bottom: 1rem;
}

.user__avatar img {
  width: 230px;
  height: 230px;
}

.user__name .name {
  font-size: 26px;
  line-height: 30px;
}

.user__name .login {
  font-size: 20px;
  font-weight: 300;
  line-height: 24px;
  color: #666;
}

.user__info {
  display: flex;
  padding-top: 15px;
}

.user__info_item {
  color: #586069;
  font-size: 14px;
  padding-right: 10px;
}

.shards__shard {
  padding-top: 24px;
  padding-bottom: 12px;
  border-bottom: 1px solid #eee;
}

.shards__shard_owner {
  display: inline-flex;
  padding-bottom: 1rem;
}

.shards__shard_owner_avatar img {
  width: 20px;
  margin-right: 5px;
}

.shards__shard_updated {
  color: #a6aab2;
  font-size: 14px;
  font-weight: 500;
}

.shards__shard_github ul {
  padding-left: 0;
  padding-top: 5px;
  margin-bottom: 0;
}

.shards__shard_github ul li {
  display: inline;
  padding-right: 5px;
  font-size: 14px;
}

.page__heading {
  padding-top: 30px;
  padding-bottom: 30px;
  margin-bottom: 30px;
  border-bottom: 1px solid #c1c4ca;
}

.page__subheading {
  font-size: 60%;
  color: #a6aab2;
}

.shard__main {
  border-right: 1px solid #c1c4ca;
}

.shard__intro {
  margin-bottom: 32px;
  padding-bottom: 30px;
  border-bottom: 1px solid #c1c4ca;
}

.shard__releases {
  margin-bottom: 12px;
}

.list__items a {
  color: #141c22;
}

.shard__owner {
  padding-top: 30px;
  border-top: 1px solid #c1c4ca;
  clear: both;
}

.shard__statistic {
  padding-left: 0px;
}

.shard__links {
  padding-left: 0px;
}

.shard__links a {
  color: #141c22;
}

.shard__release-wrap {
  font-weight: 800;
}

.shard__readme img {
  max-width: 100%;
}

.list__heading {
  font-weight: 800;
  font-size: 12px;
  text-transform: uppercase;
  color: #a6aab2;
}

